<resources>
    <string name="app_name">eCommerce</string>

    <string name="the_right_address">The Right Address \n for Shopping \n Anyday</string>
    <string name="it_s_now_is_very_easy">it\'s now is very easy to reach the\n best quality among all the\nproducts in the internt</string>
    <string name="start">START</string>
    <string name="register">REGISTER</string>
    <string name="log_in">LOG IN</string>
    <string name="let_s_register">Let\'s Register</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="google" translatable="false">Google</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="password">Password</string>
    <string name="let_s_login">Let\'s Login</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="login_text">LogIn</string>
    <string name="register_text">Register</string>
    <string name="reset_password">Reset Password</string>
    <string name="we_will_send_you_the_password_reset_link_to_your_email">we will send you the password reset link to your email</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="search_now">Search now</string>
    <string name="best_deals">Best Deals</string>
    <string name="best_products">Best Products</string>
    <string name="categories">Categories</string>
    <string name="color">Color</string>
    <string name="sizes">Sizes</string>
    <string name="add_to_card">Add to Card</string>
    <string name="my_cart">My Cart</string>
    <string name="total">Total</string>
    <string name="your_shopping_cart_is_empty">Your shopping cart is empty</string>
    <string name="delete_all_products">Delete all Products</string>
    <string name="address">Address</string>
    <string name="address_location_home">Address Location : Home</string>
    <string name="full_name">Full Name</string>
    <string name="street">street</string>
    <string name="phone">phone</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="e_commerce_dose_not_support_virtual_payments_you_can_pay_when_you_receive_your_order">E_commerce doesn\'t support virtual payments. You can pay when you receive your order.</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="place_order">Place Order</string>
    <string name="products">Products</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="edit_personal_details">edit personal details</string>
    <string name="orders">Orders</string>
    <string name="all_orders">All Orders</string>
    <string name="track_orders">Track Orders</string>
    <string name="billing_option">Billing</string>
    <string name="billing_title">Billing</string>
    <string name="notifications">Notifications</string>
    <string name="regional">Regional</string>
    <string name="logout">Logout</string>
    <string name="see_product">See product</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="type_in_search_bar_to_get_your_product">type in search bar to get your product</string>
    <string name="navigation">Navigation</string>
    <string name="set_your_addresses">Set your Addresses</string>

    <string name="default_web_client_id" translatable="false">719213248976-1ff23piiest8fvmccn3teh4ok9tt1ipr.apps.googleusercontent.com</string>
    <string name="addresses_list">My Addresses</string>
    <string name="add_new_address">Add new address</string>
    <string name="product_name">product Name</string>
    <string name="check_out">Check Out</string>
    <string name="no_orders_to_show">No orders to show</string>
    <string name="my_account">My account</string>

    <string name="tab_home">Home</string>
    <string name="tab_chair">Chair</string>
    <string name="tab_cupboard">Cupboard</string>
    <string name="tab_table">Table</string>
    <string name="tab_accessory">Accessory</string>
    <string name="tab_furniture">Furniture</string>

</resources>