<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/blury_background"
        android:scaleType="centerCrop"/>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.login_register_fragments.RegisterFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:src="@drawable/khaled_black"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRegister"
        style="@style/h4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_register"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginTop="32dp"/>

    <TextView
        android:id="@+id/tvQuestion"
        style="@style/h2"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="3"
        android:layout_height="wrap_content"
        android:text="@string/do_you_have_an_account"
        app:layout_constraintEnd_toStartOf="@+id/tvLogin"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@id/tvRegister"
        android:layout_marginTop="4dp"
        android:layout_marginStart="10dp"
        android:gravity="end"/>

    <TextView
        android:id="@+id/tvLogin"
        style="@style/h2"
        android:textColor="@color/g_dark_blue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        android:text="@string/login_text"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toEndOf="@+id/tvQuestion"
        app:layout_constraintTop_toBottomOf="@id/tvRegister"
        android:layout_marginTop="4dp"
        android:layout_marginStart="4dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etFirstName"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittextHeight"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        style="@style/editText"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@id/tvQuestion"/>


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etLastName"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittextHeight"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        style="@style/editText"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@id/etFirstName"
        android:layout_marginTop="8dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittextHeight"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        style="@style/editText"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@id/etLastName"
        android:layout_marginTop="8dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittextHeight"
        android:hint="@string/password"
        android:inputType="textPassword"
        style="@style/editText"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        android:layout_marginTop="8dp"/>

    <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittextHeight"
        android:text="@string/register"
        style="@style/blueButtonStyle"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:spinning_bar_color="@color/g_white"/>




    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGoogle"
        android:layout_width="200dp"
        android:layout_height="@dimen/smallButtonHeight"
        android:text="@string/google"
        android:background="@drawable/google_login"
        app:layout_constraintStart_toStartOf="@id/btnRegister"
        app:layout_constraintEnd_toEndOf="@id/btnRegister"
        app:layout_constraintTop_toBottomOf="@id/btnRegister"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.09"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.91"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>