<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/blury_background"
        android:scaleType="centerCrop"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.login_register_fragments.AccountOptionFragment">


    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:src="@drawable/khaled_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guidelineIcon" />

    <TextView
        android:id="@+id/tvShoppingAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_right_address"
        style="@style/h4"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/ivIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvQuality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/it_s_now_is_very_easy"
        style="@style/h2"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvShoppingAddress"
        app:layout_constraintStart_toStartOf="@id/tvShoppingAddress"
        app:layout_constraintEnd_toEndOf="@id/tvShoppingAddress"
        android:layout_marginTop="4dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        style="@style/blueButtonStyle"
        android:layout_width="@dimen/mediumButtonWidth"
        android:layout_height="@dimen/mediumButtonHeight"
        android:gravity="center"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tvQuality"
        app:layout_constraintStart_toStartOf="@id/tvQuality"
        app:layout_constraintTop_toBottomOf="@id/tvQuality" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/mediumButtonWidth"
        android:layout_height="@dimen/mediumButtonHeight"
        android:text="@string/log_in"
        style="@style/whiteButtonStyle"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@id/btnRegister"
        app:layout_constraintEnd_toEndOf="@id/btnRegister"
        app:layout_constraintTop_toBottomOf="@id/btnRegister"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24" />


</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>